Fix overflow and add borders to image

--- a/css/ckeditor_widgets.css
+++ b/css/ckeditor_widgets.css
@@ -92,10 +92,10 @@
   margin-right: -3px;
 }
 .two-col-left .col-md-9{
-  margin-left: 8px;
+  /*margin-left: 8px;*/
 }
 .two-col-right .col-md-9{
-  margin-right: 8px;
+  /*margin-right: 8px;*/
 }
 
 .accordion {
